--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,11 @@
 * {
   padding: 0;
   margin: 0;
-  box-sizing: 0;
+  box-sizing: border-box;
 }
 
 body {
-  font-family: 'DotGothic16', sans-serif;
+  font-family: 'Almaden Sans', 'DotGothic16', 'Arial', sans-serif;
   background: #181f23;
   color: rgb(240, 237, 237);
   scroll-behavior: smooth;
@@ -25,6 +25,27 @@ a {
   color: rgb(240, 237, 237);
 }
 
+h1 {
+  font-size: 2.1rem;
+  font-family: 'Courier New', sans-serif;
+  font-weight: 900;
+  text-align: center;
+}
+
+h2 {
+  text-align: center;
+  padding: 0.5rem;
+  margin-top: 1rem;
+}
+
+iframe {
+  max-width: 100%;
+}
+
+img {
+  max-width: 100%;
+}
+
 .focus {
   font-weight: 800;
   /* text-shadow: rgb(163, 164, 182) 2px 1px; */
@@ -33,116 +54,106 @@ a {
 
 /* Header & footer */
 
-header,
-footer {
-  display: flex;
-  width: 100%;
-  justify-content: space-between;
-}
-
 header {
+  display: flex;
+  justify-content: space-between;
   border-bottom: 2px solid gray;
   border-top: 1px solid gray;
   background-color: #eaf7ff;
   position: sticky;
   top: 0;
-
 }
 
-footer {
-
-  background-color: rgba(133, 133, 133, 0.767);
-  padding: 1rem;
-  align-items: center;
-
+header input,
+header form button {
+  display: none !important;
 }
 
 header nav {
-  width: 70%;
-  font-size: 1.85rem;
+  width: 100%;
   display: flex;
   justify-content: center;
 }
 
-header nav ul {
-  padding: 0.7rem;
-  margin: 0.5rem;
-  display: flex;
+header nav div a img {
   height: 3rem;
 }
 
-header nav ul li {
-  align-self: center;
-  gap: 1rem;
-  padding: 0.7rem;
-  cursor: pointer;
-
+footer {
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto auto auto;
+  grid-auto-flow: dense;
+  background-color: rgba(133, 133, 133, 0.767);
+  padding: 1rem;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  grid-gap: 2rem;
 }
 
-header nav ul li:hover {
-  background: #eee;
-  color: black;
-  border-radius: 30%;
+footer img {
+  height: 55px;
 }
 
-header nav ul li a {
-  color: black;
+footer div p {
+  text-align: center;
+  grid-row-start: 3;
+  grid-row-end: 4;
 }
 
-.logo-menu-header {
-  display: flex;
-  justify-content: space-between;
-  padding: 0.65rem;
-}
-
-.lupa-carrito-header {
-  display: flex;
-}
-
-.lupa-carrito-header img {
-  margin: 2rem;
-}
-
-header img {
-  display: flex;
-  align-self: center;
-  height: 2.2rem;
-  width: 2.2rem;
-  cursor: pointer;
-}
-
-.logo-header {
-  height: 5rem;
-  width: 5rem;
-}
-
-.header-search-bar {
-  display: flex;
-
-}
-
-.lupa-input-header {
-  border: 1px solid #917c7c;
-  outline: none;
-  height: 2rem;
-  align-self: center;
-  display: none;
-
-}
-
-.menu-desplegable {
-  display: flex;
-  padding-left: 3%;
+.socials-footer {
+  justify-self: center;
+  grid-row-start: 2;
+  grid-row-end: 3;
 }
 
 .socials-footer a {
-  padding: 1rem;
+  padding: 1.5rem;
+  gap: 0.5rem;
 }
 
 .socials-footer a:hover {
   filter: invert(100%);
 }
 
-.socials-contacto a:hover {
-  opacity: 80%;
+/* grid que contiene el body */
+
+/* .body-grid-index {
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: minmax(10vh, auto) auto 20vh;
+} */
+
+/* titulo del index.html */
+.titulo-h1 {
+  background-image: url(../img/womantitle2.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: 50% 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  min-height: 18rem;
+  padding: 1.7rem;
+  background-color: rgba(77, 74, 74, 0.164);
+}
+
+/* seccion main del index.html */
+
+.index-section-2 {
+  background-color: #0f0f0f;
+  border-top: 3px solid rgb(255, 255, 255);
+  border-bottom: 3px solid rgb(255, 255, 255);
+}
+
+.coleccion-2023-index {
+  text-align: center;
+}
+
+.imgs-coleccion-2023-index img {
+  height: 15rem;
+  width: 12rem;
 }
