--- a/css/styles.css
+++ b/css/styles.css
@@ -52,6 +52,10 @@ img {
   /* text-shadow: rgb(163, 164, 182) 2px 1px; */
 }
 
+.cards:hover {
+  box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 0.19);
+}
+
 
 
 /* Header & footer */
@@ -103,6 +107,10 @@ footer div p {
   text-align: center;
   grid-row-start: 3;
   grid-row-end: 4;
+}
+
+.parrafo-footer {
+  color: #181f23;
 }
 
 .socials-footer {
@@ -208,10 +216,38 @@ footer div p {
 
   /* main del index */
 
+  .titulo-h1 {
+    margin-bottom: 3rem;
+  }
+
+  h1 {
+    font-size: 2.5rem;
+  }
+
+  .index-section-1 {
+    display: flex;
+  }
+
+  .div-index-section-1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    line-height: 1.2rem;
+  }
+
+  .imagen-section-1 {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    justify-content: center;
+  }
+
   .imagen-section-1 p {
     text-align: center;
-    font-size: 0.8rem;
+    font-size: 1.1rem;
   }
+
 
   /* section del iframe en el index*/
 
@@ -219,6 +255,13 @@ footer div p {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: #181f23;
+    border-top: 1px solid rgb(255, 255, 255);
+    border-bottom: 1px solid rgb(255, 255, 255);
+  }
+
+  h2 {
+    font-size: 1.6rem;
   }
 
   .index-section-2 iframe {
@@ -251,6 +294,10 @@ footer div p {
   .index-col-ropa {
     grid-column: 3;
     grid-row: 2;
+  }
+
+  .coleccion-2023-index div p:hover {
+    filter: brightness(150%);
   }
 
   /* footer */
@@ -287,4 +334,14 @@ footer div p {
 
 }
 
-@media (min-width: 1200px) {}
+@media (min-width: 1200px) {
+
+  .titulo-h1 {
+    background-position: top;
+  }
+
+  h1 {
+    font-size: 4rem;
+  }
+
+}
