se completo el responsive del catalogo.html

--- a/css/styles.css
+++ b/css/styles.css
@@ -273,7 +273,7 @@ footer div p {
   }
 
   h2 {
-    font-size: 1.6rem;
+    font-size: 1.8rem;
   }
 
   .index-section-2 iframe {
@@ -361,12 +361,22 @@ footer div p {
 /* /////// Catálogo.html //////// */
 
 .catalogo-main img {
-  width: 60%;
-  height: 100%;
+  max-width: 60%;
+  max-height: 600px;
   filter: brightness(90%);
   border-radius: 10px;
   padding: 0.2rem;
   border: 1px solid white;
+}
+
+.catalogo-main span {
+  border: 1px rgba(255, 255, 255, 0.452) solid;
+  border-radius: 5px;
+  padding: 0.2rem;
+  border-top: none;
+  width: fit-content;
+  margin: 0 auto;
+  margin-bottom: 1rem;
 }
 
 .catalogo-main img:hover {
@@ -383,4 +393,70 @@ footer div p {
 .lo-mas-vendido,
 .compra-por-genero {
   margin-bottom: 3.5rem;
+}
+
+.lo-mas-vendido,
+.catalogo-gorros-y-carteras,
+.catalogo-gyc-vestidos {
+  border-bottom: 1px white solid;
+}
+
+/* media queries del catalogo.html */
+
+@media (min-width: 768px) {
+
+
+  .lo-mas-vendido div,
+  .compra-por-genero div {
+    display: flex;
+    justify-content: space-evenly;
+  }
+
+  .catalogo-gorros-y-carteras,
+  .catalogo-vestidos {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+
+  .catalogo-main img {
+    min-height: 350px;
+    max-width: 200px;
+    margin-left: 1rem;
+    margin-bottom: 0;
+  }
+
+  .div-gorros-y-carteras {
+    display: flex;
+    margin-bottom: 2rem;
+    justify-content: space-evenly;
+  }
+
+
+
+}
+
+@media (min-width: 1200px) {
+
+  .lo-mas-vendido div {
+    justify-content: space-around;
+  }
+
+  .lo-mas-vendido img {
+    margin: 0;
+  }
+
+  .catalogo-gyc-vestidos {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .catalogo-gorros-y-carteras,
+  .catalogo-vestidos {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
 }
