--- a/css/styles.css
+++ b/css/styles.css
@@ -472,3 +472,117 @@ footer div p {
   }
 
 }
+
+/* /////// NOVEDADES.HTML /////// */
+
+.main-novedades {
+  text-align: center;
+}
+
+.main-novedades img {
+  width: 100%;
+}
+
+.novedades1,
+.lo-nuevo,
+.novedades-col-v-2023,
+.ultimas-novedades {
+  margin-bottom: 2.5rem;
+}
+
+.main-novedades h3 {
+  font-weight: 600;
+  text-shadow: 2px 2px #eeeeee79;
+}
+
+.novedades1 {
+  background-image: url(../img/womanhorizontal.jpg);
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: 70% 50%;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  padding: 6rem 0;
+  font-family: 'Courier New', sans-serif;
+}
+
+.novedades1-h2 {
+  font-weight: 900;
+  font-size: 3.5em;
+  color: #eaf7ff;
+}
+
+.novedades-undertitle {
+  font-weight: 600;
+  font-style: italic;
+  line-height: 0;
+}
+
+.novedades-col-v-2023 span {
+  font-size: 0.9rem;
+}
+
+/* seccion collection 2024 */
+
+.lo-nuevo span {
+  display: flex;
+  flex-direction: column;
+  font-size: 0.85rem;
+}
+
+/* seccion formulario */
+
+.ultimas-novedades {
+  text-align: start;
+  border-top: #eee solid 1px;
+  border-bottom: #eee solid 1px;
+  padding: 0.5rem;
+}
+
+/* media queries de novedades.html */
+
+@media (min-width: 768px) {
+
+  .lo-nuevo {
+    padding: 1rem;
+    max-width: 768px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0 auto;
+  }
+
+  .ultimas-novedades {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: fit-content;
+    padding: 1rem;
+    border: #eee solid 1px;
+    justify-content: center;
+    text-align: center;
+    margin: 2rem auto;
+  }
+
+}
+
+@media (min-width: 1200px) {
+
+  .lo-nuevo {
+    display: flex;
+    flex-direction: row;
+    gap: 5rem;
+    justify-content: space-between;
+    max-width: 1200px;
+  }
+
+  .novedades-col-v-2023 img {
+    width: 645px;
+    height: 400px;
+  }
+
+
+}
