--- a/css/styles.css
+++ b/css/styles.css
@@ -505,7 +505,7 @@ footer div p {
   text-align: center;
   width: 100%;
   height: 100%;
-  padding: 6rem 0;
+  padding: 5rem 0;
   font-family: 'Courier New', sans-serif;
 }
 
@@ -521,6 +521,18 @@ footer div p {
   line-height: 0;
 }
 
+/* seccion collection 2023 */
+
+.lo-nuevo {
+  padding: 1rem;
+}
+
+.novedades-col-v-2023 img,
+.lo-nuevo iframe {
+  border-radius: 10px;
+  border: white 1px solid;
+  padding: 0.2rem;
+}
 
 /* seccion collection 2024 */
 
@@ -537,6 +549,8 @@ footer div p {
   border-top: #eee solid 1px;
   border-bottom: #eee solid 1px;
   padding: 0.5rem;
+  margin: 0.5rem;
+  margin-bottom: 1rem;
 }
 
 /* media queries de novedades.html */
