--- a/css/styles.css
+++ b/css/styles.css
@@ -492,7 +492,7 @@ footer div p {
 
 .main-novedades h3 {
   font-weight: 600;
-  text-shadow: 2px 2px #eeeeee79;
+  text-shadow: 1px 1px #eeeeee79;
 }
 
 .novedades1 {
@@ -891,6 +891,8 @@ footer div p {
     display: grid;
     grid-template-columns: 65% 35%;
     grid-template-rows: 100%;
+    margin: 6rem auto;
+    background-color: #1c2227;
   }
 
   .como-empezo :nth-child(odd) {
