--- a/scss/pages/_contacto.scss
+++ b/scss/pages/_contacto.scss
@@ -7,7 +7,7 @@
   text-align: center;
   width: 100%;
   padding: 25px;
-  font-family: 'Courier New', sans-serif;
+  font-family: $ff-couriernew;
   color: #eee;
 }
 
