--- a/scss/pages/_novedades.scss
+++ b/scss/pages/_novedades.scss
@@ -29,7 +29,7 @@
   width: 100%;
   height: 100%;
   padding: 5rem 0;
-  font-family: 'Courier New', sans-serif;
+  font-family: $ff-couriernew;
 }
 
 .novedades1-h2 {
