--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -20,106 +20,111 @@
   border-bottom: 3px solid rgb(255, 255, 255);
 }
 
-.coleccion-2023-index {
+.index-col {
+
   text-align: center;
+
+  & img {
+    height: 15rem;
+    width: 12rem;
+    border: 1px solid white;
+    border-radius: 5px;
+  }
+
+  & p {
+    border: 1px rgba(255, 255, 255, 0.452) solid;
+    border-radius: 5px;
+    padding: 0.2rem;
+    border-top: none;
+    width: fit-content;
+    margin: 0 auto;
+    margin-bottom: 1rem;
+
+    &:hover {
+      filter: brightness(150%);
+      transform: scale(1.1);
+      box-shadow: $main-text-boxshadow;
+    }
+  }
 }
-
-.coleccion-2023-index img {
-  height: 15rem;
-  width: 12rem;
-  border: 1px solid white;
-  border-radius: 5px;
-}
-
-.coleccion-2023-index p {
-  border: 1px rgba(255, 255, 255, 0.452) solid;
-  border-radius: 5px;
-  padding: 0.2rem;
-  border-top: none;
-  width: fit-content;
-  margin: 0 auto;
-  margin-bottom: 1rem;
-}
-
-.coleccion-2023-index p:hover {
-  filter: brightness(150%);
-  transform: scale(1.1);
-  box-shadow: 0 2px 4px 0 rgba(255, 255, 255, 0.2), 0 3px 10px 0 rgba(255, 255, 255, 0.19);
-}
-
-
 
 @media (min-width: 768px) {
 
 
   .index-section-1 {
     display: flex;
+
+    &-div {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      line-height: 1.2rem;
+      margin: 1rem;
+    }
+
+    &-img {
+      display: flex;
+      flex-direction: column;
+      padding: 1rem;
+      justify-content: center;
+
+      & p {
+        text-align: center;
+        font-size: 1.1rem;
+      }
+    }
   }
 
-  .div-index-section-1 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    line-height: 1.2rem;
-    margin: 1rem;
-  }
 
-  .imagen-section-1 {
-    display: flex;
-    flex-direction: column;
-    padding: 1rem;
-    justify-content: center;
-  }
 
-  .imagen-section-1 p {
-    text-align: center;
-    font-size: 1.1rem;
-  }
 
 
   .index-section-2 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #181f23;
+    background-color: $main-bg-color;
     border-top: 1px solid rgb(255, 255, 255);
     border-bottom: 1px solid rgb(255, 255, 255);
+
+    & iframe {
+      margin-bottom: 1rem;
+    }
   }
 
-  .index-section-2 iframe {
-    margin-bottom: 1rem;
-  }
-
-  .coleccion-2023-index {
+  .index-col {
     height: 100%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 0.5rem;
+
+    &-h2 {
+      grid-column: span 3;
+    }
+
+    &-sombrero {
+      grid-column: 1;
+      grid-row: 2;
+    }
+
+    &-carteras {
+      grid-column: 2;
+      grid-row: 2;
+    }
+
+    &-ropa {
+      grid-column: 3;
+      grid-row: 2;
+    }
+
+    & div p:hover {
+      filter: brightness(150%);
+    }
   }
 
-  .h2-col-2023 {
-    grid-column: span 3;
-  }
 
-  .index-col-sombrero {
-    grid-column: 1;
-    grid-row: 2;
-  }
 
-  .index-col-carteras {
-    grid-column: 2;
-    grid-row: 2;
-  }
-
-  .index-col-ropa {
-    grid-column: 3;
-    grid-row: 2;
-  }
-
-  .coleccion-2023-index div p:hover {
-    filter: brightness(150%);
-  }
 
 }
 
@@ -127,10 +132,11 @@
 
   .titulo-h1 {
     background-position: top;
+
+    & h1 {
+      font-size: 4rem;
+    }
   }
 
-  h1 {
-    font-size: 4rem;
-  }
 
 }
