--- a/scss/pages/_nosotros.scss
+++ b/scss/pages/_nosotros.scss
@@ -8,7 +8,7 @@
   text-align: center;
   width: 100%;
   padding: 3.5rem 0;
-  font-family: 'Courier New', sans-serif;
+  font-family: $ff-couriernew;
   color: #eee;
 }
 
