--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,6 +2,7 @@
 
 @import "./components/header";
 @import "./components/footer";
+@import "./components/searchbarbutton";
 
 @import "./pages/index";
 @import "./pages/catalogo";
