--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,18 @@ img {
   /* text-shadow: rgb(163, 164, 182) 2px 1px; */
 }
 
+.main-shadow {
+  box-shadow: 0 2px 4px 0 rgba(255, 255, 255, 0.2), 0 3px 10px 0 rgba(255, 255, 255, 0.19);
+}
+
+.second-shadow {
+  box-shadow: 0 2px 2px 0 rgba(3, 3, 3, 0.377);
+}
+
+.second-bg-color {
+  background-color: #252d33;
+}
+
 .cards:hover {
   box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 0.19);
 }
@@ -76,44 +88,35 @@ header {
   border-bottom: 1px solid rgb(112, 128, 156);
   background-color: #eaf7ff;
 }
-
-header input,
-header form button {
-  display: none !important;
+header nav {
+  max-width: 100%;
 }
-
 header div {
   flex-direction: row-reverse;
 }
-
-.btn-navbar {
-  border: 1px solid rgb(0, 0, 0);
-  border-radius: 30%;
-}
-
 header div a img {
   height: 55px;
   width: 55px;
 }
-
-header nav {
-  max-width: 100%;
+header .btn-navbar {
+  border: 1px solid rgb(0, 0, 0);
+  border-radius: 30%;
 }
-
 @media (min-width: 768px) {
   header div {
     flex-direction: row;
   }
-  .items-navbar {
+  header .items-navbar {
     color: #0b0f11;
     margin: 1rem;
   }
-  .items-navbar:hover {
+  header .items-navbar:hover {
     background: #eee;
     color: black;
     border-radius: 25px;
   }
 }
+
 .footer-div {
   display: grid;
   grid-template-columns: auto;
@@ -124,36 +127,29 @@ header nav {
   text-align: center;
   grid-gap: 2rem;
 }
-
-footer img {
+.footer-div img {
   height: 55px;
 }
-
-footer div p {
+.footer-div div p {
   text-align: center;
   grid-row-start: 3;
   grid-row-end: 4;
 }
-
-.parrafo-footer {
+.footer-div-parrafo {
   color: #181f23;
 }
-
-.socials-footer {
+.footer-div-socials {
   justify-self: center;
   grid-row-start: 2;
   grid-row-end: 3;
 }
-
-.socials-footer a {
+.footer-div-socials a {
   padding: 1.5rem;
   gap: 0.5rem;
 }
-
-.socials-footer a:hover {
+.footer-div-socials a:hover {
   filter: invert(100%);
 }
-
 @media (min-width: 768px) {
   .footer-div {
     grid-template-rows: 1fr;
@@ -162,25 +158,43 @@ footer div p {
     padding: 0.5rem;
     overflow: hidden;
   }
-  .logo-footer {
+  .footer-div-logo {
     grid-column: 2;
     grid-row: 1;
     text-align: center;
   }
-  .parrafo-footer {
+  .footer-div-parrafo {
     grid-row: 1;
     font-size: 0.75rem;
     margin-bottom: 0;
   }
-  .socials-footer {
+  .footer-div-socials {
     grid-column: 3;
     grid-row: 1;
   }
-  .socials-footer svg {
+  .footer-div-socials svg {
     width: 24px;
     height: 24px;
   }
 }
+
+.btn-searchbar {
+  background-image: url(../img/lupa.png);
+  background-size: cover;
+  padding: 1.2rem;
+  border: none;
+  margin-left: 0.3rem;
+}
+.btn-searchbar:hover {
+  background-color: transparent;
+  opacity: 50%;
+  transform: scale(110%);
+}
+
+.margin-left-searchbar {
+  margin-left: 11rem;
+}
+
 .titulo-h1 {
   background-image: url(../img/womantitle2.jpg);
   background-repeat: no-repeat;
@@ -196,11 +210,56 @@ footer div p {
   background-color: rgba(77, 74, 74, 0.164);
   margin-bottom: 1.5rem;
 }
+@media (min-width: 1200px) {
+  .titulo-h1 {
+    background-position: top;
+  }
+  .titulo-h1 h1 {
+    font-size: 3.6rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .index-section-1 {
+    display: flex;
+  }
+  .index-section-1-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    line-height: 1.2rem;
+    margin: 1rem;
+  }
+  .index-section-1-img {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    justify-content: center;
+  }
+  .index-section-1-img p {
+    text-align: center;
+    font-size: 1.1rem;
+  }
+}
 
 .index-section-2 {
   background-color: #0f0f0f;
   border-top: 3px solid rgb(255, 255, 255);
   border-bottom: 3px solid rgb(255, 255, 255);
+}
+@media (min-width: 768px) {
+  .index-section-2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #181f23;
+    border-top: 1px solid rgb(255, 255, 255);
+    border-bottom: 1px solid rgb(255, 255, 255);
+  }
+  .index-section-2 iframe {
+    margin-bottom: 1rem;
+  }
 }
 
 .index-col {
@@ -226,40 +285,7 @@ footer div p {
   transform: scale(1.1);
   box-shadow: 0 2px 4px 0 rgba(255, 255, 255, 0.2), 0 3px 10px 0 rgba(255, 255, 255, 0.19);
 }
-
 @media (min-width: 768px) {
-  .index-section-1 {
-    display: flex;
-  }
-  .index-section-1-div {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    line-height: 1.2rem;
-    margin: 1rem;
-  }
-  .index-section-1-img {
-    display: flex;
-    flex-direction: column;
-    padding: 1rem;
-    justify-content: center;
-  }
-  .index-section-1-img p {
-    text-align: center;
-    font-size: 1.1rem;
-  }
-  .index-section-2 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #181f23;
-    border-top: 1px solid rgb(255, 255, 255);
-    border-bottom: 1px solid rgb(255, 255, 255);
-  }
-  .index-section-2 iframe {
-    margin-bottom: 1rem;
-  }
   .index-col {
     height: 100%;
     display: grid;
@@ -285,14 +311,7 @@ footer div p {
     filter: brightness(150%);
   }
 }
-@media (min-width: 1200px) {
-  .titulo-h1 {
-    background-position: top;
-  }
-  .titulo-h1 h1 {
-    font-size: 4rem;
-  }
-}
+
 .catalogo-main img {
   max-width: 60%;
   max-height: 600px;
@@ -301,7 +320,17 @@ footer div p {
   padding: 0.2rem;
   border: 1px solid white;
 }
-
+.catalogo-main img:hover {
+  box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 0.19);
+}
+@media (min-width: 768px) {
+  .catalogo-main img {
+    min-height: 350px;
+    max-width: 200px;
+    margin-left: 1rem;
+    margin-bottom: 0;
+  }
+}
 .catalogo-main span {
   border: 1px rgba(255, 255, 255, 0.452) solid;
   border-radius: 5px;
@@ -311,17 +340,11 @@ footer div p {
   margin: 0 auto;
   margin-bottom: 1rem;
 }
-
 .catalogo-main span:hover {
   filter: brightness(150%);
   transform: scale(1.1);
   box-shadow: 0 2px 4px 0 rgba(255, 255, 255, 0.2), 0 3px 10px 0 rgba(255, 255, 255, 0.19);
 }
-
-.catalogo-main img:hover {
-  box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 0.19);
-}
-
 .catalogo-main h3 {
   margin-bottom: 1.1rem;
 }
@@ -332,6 +355,7 @@ footer div p {
 .lo-mas-vendido,
 .compra-por-genero {
   margin-bottom: 3.5rem;
+  padding: 0.4rem;
 }
 
 .lo-mas-vendido,
@@ -351,12 +375,6 @@ footer div p {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-  }
-  .catalogo-main img {
-    min-height: 350px;
-    max-width: 200px;
-    margin-left: 1rem;
-    margin-bottom: 0;
   }
   .div-gorros-y-carteras {
     display: flex;
@@ -386,9 +404,12 @@ footer div p {
 .main-novedades {
   text-align: center;
 }
-
 .main-novedades img {
   width: 100%;
+}
+.main-novedades h3 {
+  font-weight: 600;
+  text-shadow: 1px 1px rgba(238, 238, 238, 0.4745098039);
 }
 
 .novedades1,
@@ -396,11 +417,6 @@ footer div p {
 .novedades-col-v-2023,
 .ultimas-novedades {
   margin-bottom: 2.5rem;
-}
-
-.main-novedades h3 {
-  font-weight: 600;
-  text-shadow: 1px 1px rgba(238, 238, 238, 0.4745098039);
 }
 
 .novedades1 {
@@ -416,14 +432,12 @@ footer div p {
   padding: 5rem 0;
   font-family: "Courier New", sans-serif;
 }
-
 .novedades1-h2 {
   font-weight: 900;
   font-size: 3.5em;
   color: #eaf7ff;
 }
-
-.novedades-undertitle {
+.novedades1-undertitle {
   font-weight: 600;
   font-style: italic;
   line-height: 0;
@@ -432,18 +446,44 @@ footer div p {
 .lo-nuevo {
   padding: 1rem;
 }
-
-.novedades-col-v-2023 img,
-.lo-nuevo iframe {
+.lo-nuevo iframe, .lo-nuevo-col-v-2023 img {
   border-radius: 10px;
   border: white 1px solid;
   padding: 0.2rem;
 }
-
 .lo-nuevo span {
   display: flex;
   flex-direction: column;
   font-size: 0.85rem;
+}
+@media (min-width: 768px) {
+  .lo-nuevo {
+    padding: 1rem;
+    max-width: 768px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0 auto;
+  }
+}
+@media (min-width: 1200px) {
+  .lo-nuevo {
+    display: flex;
+    flex-direction: row;
+    gap: 5rem;
+    justify-content: space-between;
+    max-width: 1200px;
+  }
+  .lo-nuevo span {
+    padding: 0.3rem;
+  }
+  .lo-nuevo .iframe-span {
+    line-height: 0.4rem;
+  }
+  .lo-nuevo-col-v-2023 img {
+    width: 645px;
+    height: 400px;
+  }
 }
 
 .ultimas-novedades {
@@ -454,8 +494,7 @@ footer div p {
   margin: 0.5rem;
   margin-bottom: 1rem;
 }
-
-.subscribite-btn {
+.ultimas-novedades-btn {
   display: inline-block;
   border: 1px white solid;
   border-radius: 3px;
@@ -463,22 +502,12 @@ footer div p {
   margin-left: 0.5rem;
   margin-bottom: 0;
 }
-
-.subscribite-btn:hover {
+.ultimas-novedades-btn:hover {
   filter: brightness(200%);
   transform: scale(103%);
   border-radius: 5px;
 }
-
 @media (min-width: 768px) {
-  .lo-nuevo {
-    padding: 1rem;
-    max-width: 768px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin: 0 auto;
-  }
   .ultimas-novedades {
     display: flex;
     flex-direction: column;
@@ -491,25 +520,7 @@ footer div p {
     border-radius: 10px;
   }
 }
-@media (min-width: 1200px) {
-  .lo-nuevo {
-    display: flex;
-    flex-direction: row;
-    gap: 5rem;
-    justify-content: space-between;
-    max-width: 1200px;
-  }
-  .novedades-col-v-2023 img {
-    width: 645px;
-    height: 400px;
-  }
-  .iframe-span {
-    line-height: 0.4rem;
-  }
-  .lo-nuevo span {
-    padding: 0.3rem;
-  }
-}
+
 .contacto-title {
   background-image: url(../img/lugar2.jpg);
   width: 100%;
@@ -522,9 +533,8 @@ footer div p {
   font-family: "Courier New", sans-serif;
   color: #eee;
 }
-
 .contacto-title h2 {
-  font-size: 1.7em;
+  font-size: 1.7rem;
   font-weight: bold;
   padding: 2rem 0;
 }
@@ -578,6 +588,9 @@ footer div p {
   }
 }
 @media (min-width: 1200px) {
+  .contacto-title h2 {
+    font-size: 2.5rem;
+  }
   .socials-contacto,
   .formulario-contacto,
   .comunicate-cn {
@@ -661,7 +674,7 @@ footer div p {
   margin-bottom: 1.5rem;
   text-align: center;
   border: #eee 1px solid;
-  border-radius: 10px;
+  border-radius: 1rem;
   border-top: none;
   padding: 2rem;
   margin: 2rem auto;
@@ -744,7 +757,7 @@ footer div p {
     grid-template-columns: 65% 35%;
     grid-template-rows: 100%;
     margin: 6rem auto;
-    background-color: #1c2227;
+    background-color: #252d33;
   }
   .como-empezo :nth-child(odd) {
     grid-column: 1/2;
