--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -7,66 +7,64 @@
   padding: 1rem;
   text-align: center;
   grid-gap: 2rem;
-}
 
-footer img {
-  height: 55px;
-}
+  & img {
+    height: 55px;
+  }
 
-footer div p {
-  text-align: center;
-  grid-row-start: 3;
-  grid-row-end: 4;
-}
+  & div p {
+    text-align: center;
+    grid-row-start: 3;
+    grid-row-end: 4;
+  }
 
-.parrafo-footer {
-  color: $main-bg-color;
-}
+  &-parrafo {
+    color: $main-bg-color;
+  }
 
-.socials-footer {
-  justify-self: center;
-  grid-row-start: 2;
-  grid-row-end: 3;
-}
+  &-socials {
+    justify-self: center;
+    grid-row-start: 2;
+    grid-row-end: 3;
 
-.socials-footer a {
-  padding: 1.5rem;
-  gap: 0.5rem;
-}
+    & a {
+      padding: 1.5rem;
+      gap: 0.5rem;
 
-.socials-footer a:hover {
-  filter: invert(100%);
-}
+      &:hover {
+        filter: invert(100%);
+      }
+    }
+  }
 
-@media (min-width: 768px) {
+  @include mq-md {
 
-  .footer-div {
     grid-template-rows: 1fr;
     align-items: center;
     justify-content: space-between;
     padding: 0.5rem;
     overflow: hidden;
-  }
 
-  .logo-footer {
-    grid-column: 2;
-    grid-row: 1;
-    text-align: center;
-  }
+    &-logo {
+      grid-column: 2;
+      grid-row: 1;
+      text-align: center;
+    }
 
-  .parrafo-footer {
-    grid-row: 1;
-    font-size: 0.75rem;
-    margin-bottom: 0;
-  }
+    &-parrafo {
+      grid-row: 1;
+      font-size: 0.75rem;
+      margin-bottom: 0;
+    }
 
-  .socials-footer {
-    grid-column: 3;
-    grid-row: 1;
-  }
+    &-socials {
+      grid-column: 3;
+      grid-row: 1;
 
-  .socials-footer svg {
-    width: 24px;
-    height: 24px;
+      & svg {
+        width: 24px;
+        height: 24px;
+      }
+    }
   }
 }
