--- a/scss/pages/_catalogo.scss
+++ b/scss/pages/_catalogo.scss
@@ -1,34 +1,48 @@
-.catalogo-main img {
-  max-width: 60%;
-  max-height: 600px;
-  filter: brightness(90%);
-  border-radius: 10px;
-  padding: 0.2rem;
-  border: 1px solid white;
-}
+.catalogo-main {
 
-.catalogo-main span {
-  border: 1px rgba(255, 255, 255, 0.452) solid;
-  border-radius: 5px;
-  padding: 0.2rem;
-  border-top: none;
-  width: fit-content;
-  margin: 0 auto;
-  margin-bottom: 1rem;
-}
+  & img {
+    max-width: 60%;
+    max-height: 600px;
+    filter: brightness(90%);
+    border-radius: 10px;
+    padding: 0.2rem;
+    border: 1px solid white;
 
-.catalogo-main span:hover {
-  filter: brightness(150%);
-  transform: scale(1.1);
-  box-shadow: $main-text-boxshadow;
-}
+    &:hover {
+      box-shadow: $cards-boxshadow;
+    }
 
-.catalogo-main img:hover {
-  box-shadow: $cards-boxshadow;
-}
+    @include mq-md {
 
-.catalogo-main h3 {
-  margin-bottom: 1.1rem;
+      min-height: 350px;
+      max-width: 200px;
+      margin-left: 1rem;
+      margin-bottom: 0;
+
+    }
+  }
+
+  & span {
+    border: 1px rgba(255, 255, 255, 0.452) solid;
+    border-radius: 5px;
+    padding: 0.2rem;
+    border-top: none;
+    width: fit-content;
+    margin: 0 auto;
+    margin-bottom: 1rem;
+
+    &:hover {
+      filter: brightness(150%);
+      transform: scale(1.1);
+      box-shadow: $main-text-boxshadow;
+    }
+  }
+
+  & h3 {
+    margin-bottom: 1.1rem;
+  }
+
+
 }
 
 .catalogo-gyc-vestidos,
@@ -37,6 +51,7 @@
 .lo-mas-vendido,
 .compra-por-genero {
   margin-bottom: 3.5rem;
+  padding: .4rem;
 }
 
 .lo-mas-vendido,
@@ -59,13 +74,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-  }
-
-  .catalogo-main img {
-    min-height: 350px;
-    max-width: 200px;
-    margin-left: 1rem;
-    margin-bottom: 0;
   }
 
   .div-gorros-y-carteras {
