--- a/scss/pages/_contacto.scss
+++ b/scss/pages/_contacto.scss
@@ -9,13 +9,14 @@
   padding: 25px;
   font-family: $ff-couriernew;
   color: #eee;
+
+  & h2 {
+    font-size: 1.7rem;
+    font-weight: bold;
+    padding: 2rem 0;
+  }
 }
 
-.contacto-title h2 {
-  font-size: 1.7em;
-  font-weight: bold;
-  padding: 2rem 0;
-}
 
 .socials-contacto ul li a:hover {
   filter: brightness(200%);
@@ -69,6 +70,10 @@
 }
 
 @media (min-width: 1200px) {
+
+  .contacto-title h2 {
+    font-size: 2.5rem;
+  }
 
   .socials-contacto,
   .formulario-contacto,
