--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -12,12 +12,62 @@
   padding: 1.7rem;
   background-color: rgba(77, 74, 74, 0.164);
   margin-bottom: 1.5rem;
+
+  @include mq-xl {
+
+    background-position: top;
+
+    & h1 {
+      font-size: 3.6rem;
+    }
+  }
+}
+
+.index-section-1 {
+
+  @include mq-md {
+    display: flex;
+
+    &-div {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      line-height: 1.2rem;
+      margin: 1rem;
+    }
+
+    &-img {
+      display: flex;
+      flex-direction: column;
+      padding: 1rem;
+      justify-content: center;
+
+      & p {
+        text-align: center;
+        font-size: 1.1rem;
+      }
+    }
+  }
 }
 
 .index-section-2 {
   background-color: #0f0f0f;
   border-top: 3px solid rgb(255, 255, 255);
   border-bottom: 3px solid rgb(255, 255, 255);
+
+  @include mq-md {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: $main-bg-color;
+    border-top: 1px solid rgb(255, 255, 255);
+    border-bottom: 1px solid rgb(255, 255, 255);
+
+    & iframe {
+      margin-bottom: 1rem;
+    }
+  }
 }
 
 .index-col {
@@ -46,54 +96,9 @@
       box-shadow: $main-text-boxshadow;
     }
   }
-}
 
-@media (min-width: 768px) {
+  @include mq-md {
 
-
-  .index-section-1 {
-    display: flex;
-
-    &-div {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      line-height: 1.2rem;
-      margin: 1rem;
-    }
-
-    &-img {
-      display: flex;
-      flex-direction: column;
-      padding: 1rem;
-      justify-content: center;
-
-      & p {
-        text-align: center;
-        font-size: 1.1rem;
-      }
-    }
-  }
-
-
-
-
-
-  .index-section-2 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: $main-bg-color;
-    border-top: 1px solid rgb(255, 255, 255);
-    border-bottom: 1px solid rgb(255, 255, 255);
-
-    & iframe {
-      margin-bottom: 1rem;
-    }
-  }
-
-  .index-col {
     height: 100%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -122,21 +127,4 @@
       filter: brightness(150%);
     }
   }
-
-
-
-
-}
-
-@media (min-width: 1200px) {
-
-  .titulo-h1 {
-    background-position: top;
-
-    & h1 {
-      font-size: 4rem;
-    }
-  }
-
-
 }
