--- a/scss/pages/_novedades.scss
+++ b/scss/pages/_novedades.scss
@@ -1,9 +1,14 @@
 .main-novedades {
   text-align: center;
-}
 
-.main-novedades img {
-  width: 100%;
+  & img {
+    width: 100%;
+  }
+
+  & h3 {
+    font-weight: 600;
+    text-shadow: 1px 1px #eeeeee79;
+  }
 }
 
 .novedades1,
@@ -11,11 +16,6 @@
 .novedades-col-v-2023,
 .ultimas-novedades {
   margin-bottom: 2.5rem;
-}
-
-.main-novedades h3 {
-  font-weight: 600;
-  text-shadow: 1px 1px #eeeeee79;
 }
 
 .novedades1 {
@@ -30,37 +30,66 @@
   height: 100%;
   padding: 5rem 0;
   font-family: $ff-couriernew;
-}
 
-.novedades1-h2 {
-  font-weight: 900;
-  font-size: 3.5em;
-  color: #eaf7ff;
-}
+  &-h2 {
+    font-weight: 900;
+    font-size: 3.5em;
+    color: #eaf7ff;
+  }
 
-.novedades-undertitle {
-  font-weight: 600;
-  font-style: italic;
-  line-height: 0;
+  &-undertitle {
+    font-weight: 600;
+    font-style: italic;
+    line-height: 0;
+  }
 }
-
 
 .lo-nuevo {
   padding: 1rem;
-}
 
-.novedades-col-v-2023 img,
-.lo-nuevo iframe {
-  border-radius: 10px;
-  border: white 1px solid;
-  padding: 0.2rem;
-}
+  & iframe,
+  &-col-v-2023 img {
+    border-radius: 10px;
+    border: white 1px solid;
+    padding: 0.2rem;
+  }
 
+  & span {
+    display: flex;
+    flex-direction: column;
+    font-size: 0.85rem;
+  }
 
-.lo-nuevo span {
-  display: flex;
-  flex-direction: column;
-  font-size: 0.85rem;
+  @include mq-md {
+    padding: 1rem;
+    max-width: 768px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0 auto;
+  }
+
+  @include mq-xl {
+
+    display: flex;
+    flex-direction: row;
+    gap: 5rem;
+    justify-content: space-between;
+    max-width: 1200px;
+
+    & span {
+      padding: .3rem;
+    }
+
+    & .iframe-span {
+      line-height: .4rem;
+    }
+
+    &-col-v-2023 img {
+      width: 645px;
+      height: 400px;
+    }
+  }
 }
 
 
@@ -71,36 +100,23 @@
   padding: 0.5rem;
   margin: 0.5rem;
   margin-bottom: 1rem;
-}
 
-.subscribite-btn {
-  display: inline-block;
-  border: 1px white solid;
-  border-radius: 3px;
-  padding: 0.3rem;
-  margin-left: 0.5rem;
-  margin-bottom: 0;
-}
+  &-btn {
+    display: inline-block;
+    border: 1px white solid;
+    border-radius: 3px;
+    padding: 0.3rem;
+    margin-left: 0.5rem;
+    margin-bottom: 0;
 
-.subscribite-btn:hover {
-  filter: brightness(200%);
-  transform: scale(103%);
-  border-radius: 5px;
-}
-
-
-@media (min-width: 768px) {
-
-  .lo-nuevo {
-    padding: 1rem;
-    max-width: 768px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin: 0 auto;
+    &:hover {
+      filter: brightness(200%);
+      transform: scale(103%);
+      border-radius: 5px;
+    }
   }
 
-  .ultimas-novedades {
+  @include mq-md {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -111,33 +127,4 @@
     margin: 2rem auto;
     border-radius: 10px;
   }
-
-
-
-}
-
-@media (min-width: 1200px) {
-
-  .lo-nuevo {
-    display: flex;
-    flex-direction: row;
-    gap: 5rem;
-    justify-content: space-between;
-    max-width: 1200px;
-  }
-
-  .novedades-col-v-2023 img {
-    width: 645px;
-    height: 400px;
-  }
-
-  .iframe-span {
-    line-height: 0.4rem;
-  }
-
-  .lo-nuevo span {
-    padding: 0.3rem;
-  }
-
-
 }
